# steward-protocol

./: .dockerignore  .env.example  .gitignore  AGENTS.md  AGI_MANIFESTO.md  ARCHITECTURE.md  ARCHITECTURE_ANALYSIS.md  ARCHITECTURE_MAP.md  ARCHITECTURE_PLAN.md  AUDIT_REPORT_OPUS.md  AUTOMATION.md  BLOCKER2_ANALYSIS_SUMMARY.md  BLOCKER2_HAIKU_PLAN.md  BLOCKER2_HONEST_COMPLETION_STATUS.md  BLOCKER_0_COMPLETE.md  BOUNTY_FOUNDERS.md  CITYMAP.md  CONSTITUTION.md  DEMO.md  DEPLOYMENT.md  Dockerfile  EXEC_SUMMARY_PRODUCTION_ROADMAP.md  GAD-000.md  GAD-1000.md  GAD-README.md  GAP_ANALYSIS_REPORT.md  GOLDEN_THREAD_STATUS.md  HELP.md  INDEX.md  INFRASTRUCTURE.md  MAINTAINERS.yaml  MISSION_BRIEFING.md  OPERATIONS.md  OPUS_VALIDATION_REQUEST.md  ORACLE_ARCHITECTURE.md  PHASE1_INSTRUCTIONS.md  PHASE2_AUDIT_REPORT.md  PHASE2_INSTRUCTIONS.md  PHASE3_COMPLETION_REPORT.md  PHOENIX_INTEGRATION_PLAN.md  (+45 more)
.devcontainer/: devcontainer.json
.githooks/: README.md  pre-commit
.github/workflows/: agent-city-update.yml  attest.yml  auditor-gate.yml  city-life.yml  deploy.yml  herald-approval.yml  herald-engagement.yml  herald-recruit.yml  herald-staged.yml  herald-stealth-daily.yml  integration-tests.yml  multi-agent-federation.yml  scribe-docs.yml  steward-ci.yml  watchman-patrol.yml
agency/: README.md
agency/cartridges/: strategist.yaml
agency/inputs/: briefing_template.yaml  demo_campaign.yaml
agent-city/: LEADERBOARD.md  README.md
agent-city/scripts/: collect_stats.py  generate_leaderboard.py
agent-city/senate/: PROPOSAL_SCHEMA.json  README.md
agent-city/stats/: global.json
agent-city/town-hall/: PROPOSAL_TEMPLATE.md
agent_city/: LEADERBOARD.md  __init__.py
agent_city/registry/: __init__.py
agent_city/scripts/: collect_stats.py  (+2 more)
agora/: cartridge_main.py
ambassador/: __init__.py  requirements.txt
archive/: ledger.json
archivist/: __init__.py  archivist_shim.py  cartridge_main.py  shim.py
artisan/: cartridge_main.py
auditor/: cartridge.yaml  cartridge_main.py  shim.py
chronicle/: cartridge.yaml
civic/: cartridge_main.py
config/: matrix.yaml  phoenix.yaml  semantic_compliance.yaml
data/: vibe_ledger.db.bak
dhruva/: cartridge_main.py
diplomatic_bag/: README.md  invitation_zhayujie_chatgpt-on-wechat_20251123_170139.json
docs/: ADITYAS.md  ADR-002-three-layer-architecture.md  AGENT_CLI_ENFORCEMENT_PLAN.md  AGENT_DEVELOPMENT.md  CONFIG_CONSOLIDATION.md  DEVELOPER_GUIDELINES.md  GENESIS_OATH.md  GENESIS_OATH_SUMMARY.md  GOLDEN_STRAW.md  KERNEL_PULSE.md  LEDGER_SOVEREIGNTY.md  LEDGER_VIEWER.md  MILK_OCEAN_ROUTER.md  OATH_ROLLOUT_GUIDE.md  SEPARATION_OF_CONCERNS.md  _config.yml  architecture.md  chronicles.md  index.md  leaderboard.html  ledger-viewer.html  protocol.md
echo/: cartridge.yaml  cartridge_main.py
engineer/: cartridge_main.py
envoy/: STEWARD.md  cartridge_main.py  playbook_engine.py
examples/: __init__.py  kernel_integration_guide.py  operator_city_control_demo.py  semantic_auditor_demo.py
forum/: cartridge_main.py
gateway/: api.py
herald/: __init__.py  cartridge.yaml  cartridge_main.py  cli.py  main.py  requirements.txt  shim.py
knowledge/: concept_map.yaml  intent_rules.yaml
lens/: __init__.py  cartridge_main.py  requirements.txt
market/: __init__.py  cartridge_main.py
marketing/: launch_roadmap.md
mechanic/: cartridge_main.py
migration/: protocol_inventory.txt  tryexcept_catalog.txt
oracle/: __init__.py  cartridge_main.py
prompts/: envoy.md
provider/: llm_engine_adapter.py  reflex_engine.py  semantic_router.py  universal_provider.py
pulse/: __init__.py  requirements.txt
research/: steward_protocol_agent_marketing_claude_proposal_2025-11-22_21-22-40
science/: cartridge_main.py
scripts/: __init__.py  boot_kernel.py  consult_oracle.py  final_launch.py  fix_manifests.py  fix_steward_json_schema.py  generate_docs.py  generate_readme.py  generate_registry.py  generate_steward_docs.py  genesis_economy.py  genesis_expansion.py  issue_passports.py  join_city.py  keep_alive.sh  magic_launch.py  migrate_herald_deps.py  mission_execution.py  research_yagya.py  resource_dashboard.py  setup_community.py  setup_hooks.py  setup_identity.py  smoke_test_kernel.py  smoke_test_operator.py  stress_test_city.py  summon.py  test_gateway.py  test_herald_migration.py  test_parampara.py  test_phase6_acceptance.py  test_phase6_minimal.py  test_pre_commit_hook.sh  test_scribe_publishing.py  test_watchman_deep_inspection.py  update_snapshot.py  validate_all_steward_json.py  verify_chain.py  verify_database_isolation.py  verify_filesystem_isolation.py  (+11 more)
services/: __init__.py  llm_engine.py
steward/: GRACEFUL_DEGRADATION.md  ROADMAP.md  SPECIFICATION.md  STEWARD_JSON_SCHEMA.json  WORKSPACE_SYSTEM_DESIGN.md  __init__.py  agent_metadata.py  ashrama.py  bus.py  cli.py  client.py  constitutional_oath.py  crypto.py  daily_ritual.py  oath_mixin.py  prana_init.py  varna.py
supreme_court/: cartridge_main.py
temple/: cartridge_main.py  offering.py
tests/: city_simulation.py  scenario_demo.py  simulation.py  test_auth_fix.py  test_cartridge_vibeagent_compatibility.py  test_gajendra_integration.py  test_gajendra_moksha.py  test_herald_e2e.py  test_herald_publisher.py  test_knowledge_graph.py  test_knowledge_integration.py  test_knowledge_resolver.py  test_listener_logic.py  test_offline_features.py  test_p0_topology_integration.py  test_phase3_integration.py  test_playbook_execution.py  test_playbook_system.py  test_prana_init.py  test_resilience.py  test_roadmap.py  test_semantic_auditor.py  test_topology_integration.py  test_visa_protocol.py  verify_immune_system.py  verify_kernel_integration.py  verify_steward_discovery.py
vibe_core/: __init__.py  agent_interface.py  agent_protocol.py  boot_orchestrator.py  bridge.py  cli.py  dependency_manager.py  event_bus.py  identity.py  kernel.py  kernel_impl.py  ledger.py  lineage.py  narasimha.py  network_proxy.py  operator_adapter.py  phoenix_config.py  process_manager.py  pulse.py  resource_manager.py  sarga.py  topology.py  vfs.py
watchman/: STEWARD.md  cartridge_main.py  shim.py
(+495 files in other folders)
