[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "steward-protocol"
version = "0.2.0"
description = "Cryptographic Identity + Governance for AI Agents. A.G.I. Infrastructure."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "kimeisele", email = "contact@steward-protocol.io"},
]
keywords = ["ai", "agents", "governance", "cryptography", "identity", "autonomous", "protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    # Core Framework
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0.1",
    "ecdsa>=0.18.0",
    "rich>=13.0.0",
    "cryptography>=41.0.0",
    "cffi>=1.15.0",

    # Semantic AI (PROJECT JNANA) - Not yet implemented, commented out for now
    # "sentence-transformers>=2.2.0",
    # "numpy>=1.24.0",

    # API & Web
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "requests>=2.31.0",
    "aiofiles>=23.2.1",
    "beautifulsoup4>=4.12.0",

    # External APIs
    "tavily-python>=0.3.0",
    "tweepy>=4.14.0",
    "praw>=7.7.0",
    "PyGithub>=2.0.0",
    "google-api-python-client>=2.100.0",
    "google-generativeai>=0.8.5",

    # Utilities
    "gitpython>=3.1.0",
    "Pillow>=10.0.0",
    "python-dotenv>=1.0.0",
    "psutil>=7.1.3",
    "jsonschema>=4.17.0",
    "tomlkit>=0.12.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "ruff>=0.8.0", "pytest-cov>=4.1.0"]
local-llm = ["llama-cpp-python>=0.2.0", "huggingface-hub>=0.20.0"]

[project.scripts]
steward = "steward.cli:main"

[project.urls]
Documentation = "https://github.com/kimeisele/steward-protocol#readme"
Source = "https://github.com/kimeisele/steward-protocol"
Tracker = "https://github.com/kimeisele/steward-protocol/issues"
Leaderboard = "https://steward-protocol.io/leaderboard"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["steward"]

# ==============================================================================
# RUFF: Unified Linting & Formatting (replaces black, flake8, isort)
# ==============================================================================
[tool.ruff]
line-length = 120
target-version = "py38"  # Minimum supported version from pyproject.toml:23
exclude = [
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    "_build",
    "buck-out",
    "build",
    "dist",
    "data",
    "archive",
    "bin",
    "node_modules",
]

[tool.ruff.lint]
# Select same rules as current flake8 + isort
select = [
    "E",   # pycodestyle errors (E9xx covered)
    "F",   # pyflakes (F63, F7, F82 covered)
    "I",   # isort (import sorting)
    "W",   # pycodestyle warnings
]
ignore = [
    "E501",  # Line too long (handled by formatter)
]

# Same complexity limit as current flake8
[tool.ruff.lint.mccabe]
max-complexity = 15

# Known first-party modules for import sorting
[tool.ruff.lint.isort]
known-first-party = ["vibe_core", "steward", "agent_city"]

# Format settings (black-compatible)
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

# ==============================================================================
# LEGACY: Black configuration (kept for reference, replaced by ruff)
# ==============================================================================
# [tool.black]
# line-length = 120
# include = '\.pyi?$'
# exclude = '''
# /(
#     \.git
#   | \.hg
#   | \.mypy_cache
#   | \.tox
#   | \.venv
#   | _build
#   | buck-out
#   | build
#   | dist
#   | data
#   | archive
#   | bin
#   | node_modules
# )/
# '''
